--- a/9.17/npm/index.html
+++ b/9.17/npm/index.html
@@ -5,7 +5,10 @@
 	<title>test</title>
 </head>
 <body>
+	<div id="app"></div>
 	<script src="./dist.js"></script>
+	<script type="text/javascript" src="node_modules/vue/dist/vue.js"></script>
 	<!-- <script src="./index.js"></script> -->
+	<!-- <script ></script> -->
 </body>
 </html>
